test/files/neg/main1.check
main1.scala:5: warning: Foo has a main method with parameter type Array[String], but foo1.Foo will not be a runnable program.
  Reason: companion is a trait, which means no static forwarder can be generated.

  object Foo {  // companion is trait
         ^
main1.scala:12: warning: Foo has a main method with parameter type Array[String], but foo2.Foo will not be a runnable program.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Foo {  // companion has its own main
         ^
main1.scala:24: warning: Foo has a main method with parameter type Array[String], but foo3.Foo will not be a runnable program.
  Reason: companion contains its own main method (implementation restriction: no main is allowed, regardless of signature), which means no static forwarder can be generated.

  object Foo {  // Companion contains main, but not an interfering main.
         ^
main1.scala:33: warning: Foo has a main method with parameter type Array[String], but foo4.Foo will not be a runnable program.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Foo extends Foo {  // Inherits main from the class
         ^
main1.scala:41: warning: Foo has a main method with parameter type Array[String], but foo5.Foo will not be a runnable program.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Foo extends Foo {  // Overrides main from the class
         ^
main1.scala:52: warning: Main has a main method with parameter type Array[String], but p6.Main will not be a runnable program.
  Reason: main method must have exact signature (Array[String])Unit
  object Main {
         ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
